--- a/src/components/templates/HighlightSection.css
+++ b/src/components/templates/HighlightSection.css
@@ -1,6 +1,6 @@
 .main-section {
     width: 50vw;
-    height: 50vh;
+    height: auto;
     padding: 10vh 0 10vh 15vw;
 }
 
@@ -21,7 +21,7 @@
 }
 
 .sub-title {
-    color: #000;
+    color: rgb(19, 19, 19);
     font-family: 'IBM Plex Sans';
     font-size: 23px;
     font-style: normal;
