--- a/src/components/templates/Formulário/FormCadastro.css
+++ b/src/components/templates/Formulário/FormCadastro.css
@@ -1,3 +1,12 @@
+.title {
+    position: relative;
+    left: 15vw;
+    width: 70vw;
+    text-align: center;
+    bottom: -5vh;
+    color: lightsteelblue;
+}
+
 .form {
     padding: 10vh 7vw 10vh 7vw;
     margin: 0 15vw 10vh 15vw;
@@ -94,8 +103,9 @@ p {
 }
 
 .button-next {
+    display: flex;
+    justify-content: right;
     margin-top: 80px;
-    justify-content: center;
 }
 
 .btn-primary {
@@ -116,11 +126,17 @@ p {
     }
 }
 
-.text-button-next {
+.text-button-form {
     color: aliceblue;
     text-align: center;
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
     line-height: 120%;
+}
+
+.button-send {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
 }
