--- a/src/components/organisms/Header/HeaderLogado.css
+++ b/src/components/organisms/Header/HeaderLogado.css
@@ -4,7 +4,7 @@
 
 header {
     height: 10vh;
-    /* padding: 5px; */
+    padding: 5px;
     min-height: auto;
     background-color: #ADF679;
     display: flex;
