--- a/src/pages/Configurações/Configuracoes.css
+++ b/src/pages/Configurações/Configuracoes.css
@@ -24,6 +24,10 @@
 }
 
 .profile-info {
+    /* display: flex; */
+    position: relative;
+    justify-content: center;
+    gap: 30px;
     width: 50vw;
 }
 
@@ -86,6 +90,7 @@
 }
 
 .title-stgs {
+    padding-left: 20px;
     color: #000;
     text-align: left;
     font-family: IBM Plex Sans;
@@ -101,13 +106,63 @@
 }
 
 .setting {
+    display: flex;
     margin-bottom: 3vh;
 }
 
-input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-    flex-shrink: 0;
+.form-check-form-switch {
+    display: flex;
+    align-items: center;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    padding-left: 20px;
+    width: 60px;
+    height: 34px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #006A69;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 .form-check-label {
