--- a/src/components/templates/Login/FormLogin.css
+++ b/src/components/templates/Login/FormLogin.css
@@ -13,7 +13,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);   
 }
 
-.logo {
+.login-logo {
     padding-top: 32px;
     margin: auto;
 }
